--- a/templates/admin/edit_property.html
+++ b/templates/admin/edit_property.html
@@ -7,31 +7,31 @@
     <h2>Edit Property</h2>
     <form method="POST" enctype="multipart/form-data">
         <label>State:</label>
-        <input type="text" name="state" value="{{ property.state }}"><br><br>
+        <input type="text" name="state" value="{{ prop.state }}"><br><br>
 
         <label>Location:</label>
-        <input type="text" name="location" value="{{ property.location }}"><br><br>
+        <input type="text" name="location" value="{{ prop.location }}"><br><br>
 
         <label>Property Name:</label>
-        <input type="text" name="name" value="{{ property.name }}"><br><br>
+        <input type="text" name="name" value="{{ prop.name }}"><br><br>
 
         <label>Bedrooms:</label>
-        <input type="number" name="bedrooms" value="{{ property.bedrooms }}"><br><br>
+        <input type="number" name="bedrooms" value="{{ prop.bedrooms }}"><br><br>
         
         <label>Guests</label>
-<input type="number" name="guests" value="{{ property.guests or '' }}" required><br>
+<input type="number" name="guests" value="{{ prop.guests or '' }}" required><br>
 
 <label>Beds</label>
-<input type="number" name="beds" value="{{ property.beds or '' }}" required><br>
+<input type="number" name="beds" value="{{ prop.beds or '' }}" required><br>
 
 <label>Baths</label>
-<input type="number" name="baths" value="{{ property.baths or '' }}" required><br>
+<input type="number" name="baths" value="{{ prop.baths or '' }}" required><br>
 
 <label>Price per Night</label>
-<input type="number" step="0.01" name="price_per_night" value="{{ property.price_per_night or '' }}" required><br>
+<input type="number" step="0.01" name="price_per_night" value="{{ prop.price_per_night or '' }}" required><br>
 
 <label>Short Description</label>
-<textarea name="short_description" rows="3">{{ property.short_description or '' }}</textarea><br>
+<textarea name="short_description" rows="3">{{ prop.short_description or '' }}</textarea><br>
 
         <label>Visible:</label>
         <input type="checkbox" name="visible" {% if property.visible %}checked{% endif %}><br><br>
