--- a/templates/admin/add_destination.html
+++ b/templates/admin/add_destination.html
@@ -4,25 +4,22 @@
     <title>Add Destination</title>
 </head>
 <body>
-    <h1>Add New Destination</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <label>Name:</label><br>
-        <input type="text" name="name" required><br><br>
+   <h2>Add Destination</h2>
+<form method="POST" enctype="multipart/form-data">
+  <label>Name</label><br>
+  <input type="text" name="name" required><br><br>
 
-        <label>Description:</label><br>
-        <textarea name="description" rows="4" cols="50" required></textarea><br><br>
+  <label>Description</label><br>
+  <textarea name="description" required></textarea><br><br>
 
-        <label>More Info:</label><br>
-        <textarea name="more_info" rows="4" cols="50"></textarea><br><br>
+  <label>Image</label><br>
+  <input type="file" name="image" accept="image/*" required><br><br>
 
-        <label>Image:</label><br>
-        <input type="file" name="image" required><br><br>
+  <label>Visible</label>
+  <input type="checkbox" name="visible" checked><br><br>
 
-        <label>Visible:</label>
-        <input type="checkbox" name="visible" checked><br><br>
-
-        <button type="submit">Add Destination</button>
-    </form>
+  <button type="submit">Add Destination</button>
+</form>
 
     <br>
     <a href="{{ url_for('view_destinations') }}">Back to List</a>
