--- a/templates/admin/destinations.html
+++ b/templates/admin/destinations.html
@@ -93,8 +93,10 @@
       <p>{{ dest.description }}</p>
       <img src="{{ url_for('static', filename='uploads/' ~ dest.image_filename) }}" alt="{{ dest.name }}">
       <form action="{{ url_for('toggle_destination_visibility', id=dest.id) }}" method="post">
-        <button type="submit" class="btn-toggle">{{ 'Hide' if dest.visible else 'Show' }}</button>
-      </form>
+  <button type="submit">
+    {% if dest.visible %}Hide{% else %}Show{% endif %}
+  </button>
+</form>
       <div class="btn-group">
         <a href="{{ url_for('edit_destination', id=dest.id) }}" class="btn-edit">Edit</a>
         <form action="{{ url_for('delete_destination', id=dest.id) }}" method="post">
