--- a/templates/admin/edit_destination.html
+++ b/templates/admin/edit_destination.html
@@ -8,7 +8,7 @@
     <form method="POST" enctype="multipart/form-data">
         <p>
             <label for="name">Name:</label><br>
-            <input type="text" name="name" value="{{ dest.name }}">
+           <input type="text" name="name" value="{{ destination.name }}">
         </p>
         <p>
             <label for="description">Description:</label><br>
