--- a/templates/admin/destinations.html
+++ b/templates/admin/destinations.html
@@ -99,9 +99,9 @@
 </form>
       <div class="btn-group">
         <a href="{{ url_for('edit_destination', id=dest.id) }}" class="btn-edit">Edit</a>
-        <form action="{{ url_for('delete_destination', id=dest.id) }}" method="post">
-          <button type="submit" class="btn-delete" onclick="return confirm('Are you sure you want to delete this destination?')">Delete</button>
-        </form>
+        <form action="{{ url_for('delete_destination', id=dest.id) }}" method="post" style="display:inline;">
+    <button type="submit" onclick="return confirm('Are you sure you want to delete this destination?')">Delete</button>
+</form>
       </div>
     </div>
     {% endfor %}
