--- a/templates/admin/destinations.html
+++ b/templates/admin/destinations.html
@@ -55,7 +55,7 @@
                     <h5 class="card-title">{{ dest.name }}</h5>
                     <p class="card-text">{{ dest.description }}</p>
                     <div class="d-flex justify-content-between">
-                        <a href="#" class="btn btn-info btn-sm">More Info</a>
+                        <a href="{{ url_for('destination_detail', id=dest.id) }}" class="btn btn-info btn-sm">More Info</a>
                         <form action="{{ url_for('toggle_destination_visibility', id=dest.id) }}" method="post">
                             <button type="submit" class="btn btn-sm {{ 'btn-warning' if dest.visible else 'btn-secondary' }}">
                                 {{ 'Hide' if dest.visible else 'Show' }}
